Revert "상품 사이즈 별 수량 추가, 짧은 설명 추가"
This reverts commit a56d3c9169ead53b3ed1052b36d315bff2e3fffe.
